# kernel

./: .gitignore  .secrets.json.example  CHANGELOG.md  CLA.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/licensing/: faq.md
ops/db_versions/: 2025_03_16_0000_add_applications_table.py  2025_03_16_0001_add_accounts_table.py  2025_03_16_0002_add_roles_table.py  2025_03_16_0003_add_privileges_table.py  2026_03_19_2257_rename_tables_accounts_rols_privileges.py  2026_03_20_0147_add_secret_model.py  2026_03_20_0200_add_provider_model.py  2026_03_22_0000_add_staging_reconciled_tables.py  2026_03_22_0001_add_lake_batches_table.py  2026_03_22_0002_drop_staging_bulk_tables.py  2026_03_23_0000_add_persons_person_attributes.py  2026_03_23_0001_add_employees_employee_attributes.py  2026_03_23_0002_add_employee_records_tables.py  2026_03_24_0000_add_nhis_nhi_attributes.py  2026_03_24_2356_add_employee_provider_mapping_and_.py  2026_03_28_0332_rework_applications.py  2026_03_29_0142_rework_connectors.py  2026_03_29_0405_remove_is_online.py  2026_04_04_1200_rename_connector_runtimes_runtime_id.py  2026_04_04_1400_rename_connector_runtimes_table.py  2026_04_05_1000_drop_applications_connector_id.py  2026_04_05_1200_add_log_event_buffer.py  2026_04_05_2258_add_buffer_logging.py  2026_04_15_1939_add_customers_and_customer_attributes.py  2026_04_15_2123_add_subjects.py  2026_04_15_2200_add_subject_attributes.py  2026_04_15_2328_add_application_code.py  2026_04_16_2250_add_account_subject_id_and_status.py  2026_04_17_0047_add_resource_and_resource_attribute_.py  2026_04_17_0150_add_access_artifacts_table.py  2026_04_17_0200_add_access_facts_table.py  2026_04_17_0300_add_artifact_bindings_table.py  2026_04_17_0400_add_initiatives_table.py  2026_04_17_0500_access_facts_unique_nulls_not_distinct.py  2026_04_17_0600_add_ownership_assignments_table.py  2026_04_17_0700_add_access_usage_facts_table.py  2026_04_17_0800_add_threat_facts_table.py  2026_04_18_0000_add_effective_grants_table.py  2026_04_18_0100_add_effective_grants_source_initiative_idx.py  2026_04_23_0000_drop_roles_and_privileges.py  (+49 more)
pipelines/: README.md  access_apply_active_cleanup_scan.yaml  access_apply_pipeline.yaml  access_plan_application_decommissioned.yaml  access_plan_initiative_changed.yaml  access_plan_subject_triggers.yaml  account_offboarding_with_grace.yaml  application_sync.yaml  initiatives_scheduled_replan_scan.yaml  manual_application_reconcile.yaml  nightly_orphan_scan.yaml  schema.json
resources/policies/: RULES_GUIDE.md  lifecycle.yaml  mapping.yaml  risk.yaml
scripts/: seed_account_reconcile.py  seed_dev.py  seed_phase19_demo.py  seed_phase19_diff_states.py
scripts/prototype/: lake_query_validation.py
src/: conftest.py
src/core/: context.py
src/integration_tests/: conftest.py  test_import_smoke.py  test_lake_facts_parity.py  test_lake_pipeline_e2e.py  test_phase15_e2e.py  test_phase15_parity.py  test_phase15_step16_drop.py
src/inventory/: enums.py  (+1 more)
(+1378 files in other folders)
